src/app/app.component.scss
@import url('https://fonts.googleapis.com/css?family=Butterfly+Kids|Clicker+Script|Handlee|Josefin+Sans:300,400,600,700');

* {
  font-family: 'Clicker Script', cursive;
  font-weight: 400;
}

a {
  text-decoration: none;
  &:hover {
    text-decoration: none;
    opacity: .8;
  }
}

nav.navbar {
  background: transparent;
  position: absolute;
  width: 100%;
  .navbar-nav {
    .nav-item {
      margin: 0 20px;
      .nav-link {
        color: white;
        font-size: 20px;
      }
    }
  }
}

